--- a/public/index.html
+++ b/public/index.html
@@ -358,7 +358,7 @@ text-size-adjust:none;
             <div class="row">
     <div class="project" style="margin-top: 34px">
         <h3 class="classic-title"><span>App-focused blockchain framework</span></h3>
-        <span class="small_title" style="font-size: 17px;font-family: quicksand">Building a blockchain app usually involves a steep learning curve, taxing infrastructure requirements and gets high complex.</span>
+        <span class="small_title" style="font-size: 17px;font-family: quicksand">Building a blockchain app usually involves a steep learning curve, taxing infrastructure requirements and gets highly complex.</span>
         <br><br>
         <span class="small_title" style="font-size: 17px;font-family: quicksand">Credbits is a fast growing framework for blockchain development with a focus of ease of development and one-click deployment of blockchain artifacts. </span>
 
