--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@ text-size-adjust:none;
     <!-- Responsive Metatag -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
-    <meta name="description" content="Credbits helps application developers leverage power of blockchain with a easy to use application building framework">
-    <meta property="og:description" content="Credbits helps application developers leverage power of blockchain with a easy to use application building framework">
+    <meta name="description" content="Credbits helps application developers leverage the power of blockchain with an easy to use application development framework">
+    <meta property="og:description" content="Credbits helps application developers leverage the power of blockchain with an easy to use application development framework">
     <meta property="og:keywords" content="credbits, blockchain framework, blockchain, hyperledger fabric, blockchain development, chaincode development, smart contract, hyperledger fabric framework">
     <meta name="keywords" content="credbits, blockchain framework, blockchain, hyperledger fabric, blockchain development, chaincode development, smart contract, hyperledger fabric framework">
 
